[package]
name = "dusk-plonk"
version = "0.3.3"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
           "Luke Pearson <luke@dusk.network>", 
           "CPerezz <carlos@dusk.network>"] 
readme = "README.md"
repository = "https://github.com/dusk-network/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
license = "MPL-2.0"
edition = "2018"

[dependencies]
merlin = "2.0.0"
rand = "0.7.2"
rand_core = { version = "0.5", default-features = false }
dusk-bls12_381 = { git = "https://github.com/dusk-network/bls12_381", branch = "vlope11/scalar-no-std", default-features = false }
dusk-jubjub = { git = "https://github.com/dusk-network/jubjub", branch = "vlopes11/no-std-scalars",  default-features = false }
itertools = "0.9.0"
rand_chacha = "0.2"
rayon = "1.3.0"
anyhow = "1.0.32"
thiserror = "1.0"
serde = "1.0"

[dev-dependencies]
rand = "0.7.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
default = ["std"]
nightly = []
trace = []
trace-print = ["trace"]
canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon"]
std = ["dusk-bls12_381/default", "dusk-jubjub/default"]
